--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* Montserrat fonts */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap");
+
 * {
     margin: 0;
     padding: 0;
